# satellite_reentry

./: .gitignore  README.md  pyproject.toml  st_app.py
notebooks/: reentry.ipynb  satevo.ipynb
satellite_reentry/: __init__.py  reentry.py
