[tool.poetry]
name = "satellite_reentry"
version = "0.1.0"
description = "Satellite Reentry altitude calculator"
authors = ["Janos Tolgyesi <janos.tolgyesi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
